add some html header elements

--- a/index.html
+++ b/index.html
@@ -10,5 +10,27 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <header>
+        <div>
+            <h1>Hello!</h1>
+            <h2>My name's</h2>
+            <h2>Biz</h2>
+        </div>
+        <nav>
+            <div>
+                <h2>I code things,</h2>
+                <h2>check it out</h2>
+                <h2><a href="#projects">Projects</a></h2>
+                <h2><a href="#about-me">About Me</a></h2>
+                <h2><a href="#contact">Contact</a></h2>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
