add html structure for parallax

--- a/index.html
+++ b/index.html
@@ -6,31 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>Biz's Portfolio</title>
 </head>
 <body>
     <script src="script.js"></script>
     <header>
-        <div>
-            <h1>Hello!</h1>
-            <h2>My name's</h2>
-            <h2>Biz</h2>
-        </div>
-        <nav>
-            <div>
-                <h2>I code things,</h2>
-                <h2>check it out</h2>
-                <h2><a href="#projects">Projects</a></h2>
-                <h2><a href="#about-me">About Me</a></h2>
-                <h2><a href="#contact">Contact</a></h2>
+        <div class="parallax-img-header">
+            <div class="header header-intro parallax-img-title">
+                <span class="parallax-img-border">
+                    <h1 id="hello">Hello!</h1>
+                    <h2 id="myname">My name's</h2>
+                    <h2 id="biz">Biz</h2>
+                    <nav>
+                        <div class="header header-nav">
+                            <h2>I code things,</h2>
+                            <h2>check it out</h2>
+                            <h2><a href="#projects">Projects</a></h2>
+                            <h2><a href="#about-me">About Me</a></h2>
+                            <h2><a href="#contact">Contact</a></h2>
+                        </div>
+                    </nav>
+                </span>
             </div>
-        </nav>
+        </div>
     </header>
     <main>
+        <div class="parallax-img-projects">
+            <div class="parallax-img-text">
+                <span class="parallax-img-border">
+                    <h3 id="projects">Projects</h3>
+                </span>
+            </div>
+        </div>
+        <section>
+            
+        </section>
+
+        <div class="parallax-img-about-me">
+            <div class="parallax-img-text">
+                <span class="parallax-img-border">
+                    <h3 id="about-me">About Me</h3>
+                </span>
+            </div>
+        </div>
+        <section class="section-divider">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, dolore.
+        </section>
+
+        <div class="parallax-img-contact">
+            <div class="parallax-img-text">
+                <span class="parallax-img-border">
+                    <h3 id="contact">Contact</h3>
+                </span>
+            </div>
+        </div>
+        <section class="section-divider">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, veniam!
+        </section>
 
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
