add more parallax structure

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 </span>
             </div>
         </div>
-        <section>
-            
+        <section class="section-divider">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsa.
         </section>
 
         <div class="parallax-img-about-me">
