--- a/index.html
+++ b/index.html
@@ -10,63 +10,91 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <header>
-        <div class="parallax-img-header">
-            <div class="header header-intro parallax-img-title">
-                <span class="parallax-img-border">
-                    <h1 id="hello">Hello!</h1>
-                    <h2 id="myname">My name's</h2>
-                    <h2 id="biz">Biz</h2>
-                    <nav>
-                        <div class="header header-nav">
-                            <h2>I code things,</h2>
-                            <h2>check it out</h2>
-                            <h2><a href="#projects">Projects</a></h2>
-                            <h2><a href="#about-me">About Me</a></h2>
-                            <h2><a href="#contact">Contact</a></h2>
+    <div class="parallax-img parallax-img-header">
+        <!-- This image title does not have the title class because it is 
+        a flexbox and will not have the same styling -->
+        <div class="header header-intro">
+            <span class="parallax-img-border">
+                <header>
+                    <div class="header-flex">
+                        <h1 class="header-text" id="hello">Hello!</h1>
+                        <h2 class="header-text" id="myname">My name's</h2>
+                        <h2 class="header-text" id="biz">Biz</h2>
+                        <h2 class="header-text" id="code-things">
+                            I code things, check it out.
+                        </h2>
+                    </div>
+                    <nav class="header-nav">
+                        <div class="header">
+                            <h2 class="header-text">I code things,</h2>
+                            <h2 class="header-text">check it out</h2>
+                            <div class="header-links">
+                                <h2 class="header-link header-text" id="projects-link">
+                                    <a href="#projects">Projects</a>
+                                </h2>
+                                <h2 class="header-link header-text" id="about-me-link">
+                                    <a href="#about-me">About Me</a>
+                                </h2>
+                                <h2 class="header-link header-text" id="contact-link">
+                                    <a href="#contact">Contact</a>
+                                </h2>
+                            </div>
                         </div>
+                        <!-- TODO: A hidden navbar that will display once the user scrolls 
+                        past the first section -->
+                        <!-- TODO: A hidden navbar for mobile -->
                     </nav>
-                </span>
-            </div>
+                </header>
+            </span>
         </div>
-    </header>
-    <main>
-        <div class="parallax-img-projects">
-            <div class="parallax-img-text">
-                <span class="parallax-img-border">
-                    <h3 id="projects">Projects</h3>
-                </span>
-            </div>
+    </div>
+    <!-- <section class="section-divider after-header">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, sed!</p>
+    </section> -->
+    <div id="projects" class="parallax-img parallax-img-projects">
+        <div class="parallax-img-text">
+            <span class="parallax-img-border">
+                <h3>Projects</h3>
+            </span>
         </div>
-        <section class="section-divider">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsa.
-        </section>
+    </div>
+    <!-- <section class="section-divider">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsa.</p>
+    </section> -->
 
-        <div class="parallax-img-about-me">
-            <div class="parallax-img-text">
-                <span class="parallax-img-border">
-                    <h3 id="about-me">About Me</h3>
-                </span>
-            </div>
+    <div id="about-me" class="parallax-img parallax-img-about-me">
+        <div class="parallax-img-text">
+            <span class="parallax-img-border">
+                <h3>About Me</h3>
+            </span>
         </div>
-        <section class="section-divider">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, dolore.
-        </section>
+    </div>
+    <!-- <section class="section-divider">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, dolore.</p>
+    </section> -->
 
-        <div class="parallax-img-contact">
-            <div class="parallax-img-text">
-                <span class="parallax-img-border">
-                    <h3 id="contact">Contact</h3>
-                </span>
-            </div>
+    <div id="contact" class="parallax-img parallax-img-contact">
+        <div class="parallax-img-text">
+            <span class="parallax-img-border">
+                <h3>Contact</h3>
+            </span>
         </div>
-        <section class="section-divider">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, veniam!
-        </section>
+    </div>
+    <!-- <section class="section-divider">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, veniam!</p>
+    </section> -->
 
-    </main>
-    <footer>
-        
-    </footer>
+    <div class="parallax-img parallax-img-footer">
+        <div class="parallax-img-text">
+            <span class="parallax-img-border">
+                <footer>
+                    <h2>Made with ❤️ and CSS</h2>
+                </footer>
+            </span>
+        </div>
+    </div>
+    <!-- <section class="section-divider">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, veniam!</p>
+    </section> -->
 </body>
 </html>
