fix gray haze on header

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="parallax-img parallax-img-header">
         <!-- This image title does not have the title class because it is 
         a flexbox and will not have the same styling -->
-        <div class="header header-intro">
+        <div class="header-intro">
             <span class="parallax-img-border">
                 <header>
-                    <div class="header-flex">
+                    <div class="header header-flex">
                         <h1 class="header-text" id="hello">Hello!</h1>
                         <h2 class="header-text" id="myname">My name's</h2>
                         <h2 class="header-text" id="biz">Biz</h2>
