add cards to projects sec

--- a/index.html
+++ b/index.html
@@ -48,14 +48,78 @@
             </span>
         </div>
     </div>
-    <!-- <section class="section-divider after-header">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, sed!</p>
-    </section> -->
-    <div id="projects" class="parallax-img parallax-img-projects">
-        <div class="parallax-img-text">
-            <span class="parallax-img-border">
-                <h3>Projects</h3>
-            </span>
+    <section id="projects" class="section-divider after-header">
+        <h3>Projects</h3>
+    </section>
+    <div class="parallax-img parallax-img-projects">
+        <div class="parallax-img-text"></div>
+        <div class="cards-container">
+            <section class="card">
+                <h4 class="card-title">
+                    <a href="https://github.com/BizTheHabesha/css-snippet-cheatsheet">
+                        CSS Snippets
+                    </a>
+                </h4>
+                <div class="card-content" id="css-snippets-card">
+                    <a class="card-image-link" href="https://github.com/BizTheHabesha/css-snippet-cheatsheet"></a>
+                </div>
+                <p class="card-desc">
+                    <a href="https://github.com/BizTheHabesha/css-snippet-cheatsheet">
+                        A cheatsheet that includes a bunch of snippets used all throughout my projects.
+                    </a>
+                </p>
+            </section>
+            <section class="card">
+                <h4 class="card-title">
+                    <a href="https://github.com/BizTheHabesha/Command-Prompt-Chess">
+                        Command Prompt Chess
+                    </a>
+                </h4>
+                <div class="card-content" id="chess-card">
+                    <a class="card-image-link" href="https://github.com/BizTheHabesha/Command-Prompt-Chess"></a>
+                </div>
+                <p class="card-desc">
+                    <a href="https://github.com/BizTheHabesha/Command-Prompt-Chess">
+                        The game of chess written in C++ and played in the command prompt.
+                    </a>
+                </p>
+            </section>
+            <section class="card">
+                <h4 class="card-title">
+                    <a href="https://github.com/BizTheHabesha/OASIS-Online">
+                        O.A.S.I.S. Online
+                    </a>
+                </h4>
+                <div class="card-content" id="oasis-online-card">
+                    <a class="card-image-link" href="https://github.com/BizTheHabesha/OASIS-Online"></a>
+                </div>
+                <p class="card-desc">
+                    <a href="https://github.com/BizTheHabesha/OASIS-Online">
+                        An attempt at making O.A.S.I.S Online in Lua. Though the project
+                        is deprecated now, I hope it can serve as a repository for
+                        other Lua devs.
+                    </a>
+                    
+                </p>
+            </section>
+            <section class="card">
+                <h4 class="card-title">
+                    <a href="https://github.com/BizTheHabesha/prework-study-guide">
+                        Prework Study Guide
+                    </a>
+                </h4>
+                <div class="card-content" id="prework-card">
+                    <a class="card-image-link" href="https://github.com/BizTheHabesha/prework-study-guide"></a>
+                </div>
+                <p class="card-desc">
+                    <a href="https://github.com/BizTheHabesha/prework-study-guide">
+                        A study guide to take notes and jot down interesting details about
+                        all the stuff I'm learning. This was made as part of the prework for
+                        my bootcamp, hence 'prework' study guide.
+                    </a>
+                    
+                </p>
+            </section>
         </div>
     </div>
     <!-- <section class="section-divider">
