move section title to divider

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
             </span>
         </div>
     </div>
+
     <section id="projects" class="section-divider after-header">
         <h3>Projects</h3>
     </section>
+
     <div class="parallax-img parallax-img-projects">
         <div class="parallax-img-text"></div>
         <div class="cards-container">
@@ -122,31 +124,28 @@
             </section>
         </div>
     </div>
-    <!-- <section class="section-divider">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsa.</p>
-    </section> -->
 
-    <div id="about-me" class="parallax-img parallax-img-about-me">
+    <section id="about-me" class="section-divider">
+        <h3>About Me</h3>
+    </section>
+
+    <div class="parallax-img parallax-img-about-me">
         <div class="parallax-img-text">
             <span class="parallax-img-border">
-                <h3>About Me</h3>
             </span>
         </div>
     </div>
-    <!-- <section class="section-divider">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, dolore.</p>
-    </section> -->
+
+    <section class="section-divider">
+        <h3>Contact</h3>
+    </section>
 
     <div id="contact" class="parallax-img parallax-img-contact">
         <div class="parallax-img-text">
             <span class="parallax-img-border">
-                <h3>Contact</h3>
             </span>
         </div>
     </div>
-    <!-- <section class="section-divider">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, veniam!</p>
-    </section> -->
 
     <div class="parallax-img parallax-img-footer">
         <div class="parallax-img-text">
@@ -157,8 +156,5 @@
             </span>
         </div>
     </div>
-    <!-- <section class="section-divider">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, veniam!</p>
-    </section> -->
 </body>
 </html>
