fix card overflow

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <h2 class="header-text" id="myname">My name's</h2>
                         <h2 class="header-text" id="biz">Biz</h2>
                         <h2 class="header-text" id="code-things">
-                            I code things, check it out.
+                            I code things, check it out ⬇️
                         </h2>
                     </div>
                     <nav class="header-nav">
@@ -136,11 +136,11 @@
         </div>
     </div>
 
-    <section class="section-divider">
+    <section id="contact" class="section-divider">
         <h3>Contact</h3>
     </section>
 
-    <div id="contact" class="parallax-img parallax-img-contact">
+    <div class="parallax-img parallax-img-contact">
         <div class="parallax-img-text">
             <span class="parallax-img-border">
             </span>
