add about me section

--- a/index.html
+++ b/index.html
@@ -130,9 +130,37 @@
     </section>
 
     <div class="parallax-img parallax-img-about-me">
-        <div class="parallax-img-text">
-            <span class="parallax-img-border">
-            </span>
+        <div class="parallax-img-text"></div>
+        <div class="img-container">
+            <img id="selfie" src="./assets/img/selfie.jpeg" alt="A picture of Biz in the Boulder mountains.">
+        </div>
+        <div class="text-container">
+            <p class="selfie-text">
+                Hello! My name is Biz, and I'm working to 
+                become a full stack developer. As of now,
+                I'm proffcient in Lua, C++, and C# and have
+                deployed in each in at least one project.
+                But enough about my skills, you've
+                (hopefully) already seen my skills in the
+                projects section. My full name is Bisrat
+                Gebrekidan and I was born in Addis Ababa,
+                Ethiopia. Me and my cousin Sammy have been
+                playing computer games since I came to
+                America in 2006, and I inevitably picked up
+                game development at a young age. My first
+                language was Lua, which I used in Roblox
+                Studio to make several games. By the time I
+                was in high school, I had begun C# and
+                unity. All throughout my life my family
+                told me that I was meant to be an engineer,
+                and they told me to take inspiration from
+                his mechanical engineering background. It
+                wasn't until I started applying to university
+                that I realized I could turn coding into a
+                career in its own right. Three years later,
+                and I'm three quarters through my degree
+                and pursuing a bootcamp certificate as well.
+            </p>
         </div>
     </div>
 
@@ -143,18 +171,19 @@
     <div class="parallax-img parallax-img-contact">
         <div class="parallax-img-text">
             <span class="parallax-img-border">
-            </span>
-        </div>
-    </div>
-
-    <div class="parallax-img parallax-img-footer">
-        <div class="parallax-img-text">
-            <span class="parallax-img-border">
                 <footer>
                     <h2>Made with ❤️ and CSS</h2>
                 </footer>
             </span>
         </div>
     </div>
+
+    <!-- <div class="parallax-img parallax-img-footer">
+        <div class="parallax-img-text">
+            <span class="parallax-img-border">
+                
+            </span>
+        </div>
+    </div> -->
 </body>
 </html>
