add footer and styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <nav class="header-nav">
                         <div class="header">
                             <h2 class="header-text">I code things,</h2>
-                            <h2 class="header-text">check it out</h2>
+                            <h2 class="header-text">check it out ⬇️</h2>
                             <div class="header-links">
                                 <h2 class="header-link header-text" id="projects-link">
                                     <a href="#projects">Projects</a>
@@ -54,9 +54,9 @@
     </section>
 
     <div class="parallax-img parallax-img-projects">
-        <div class="parallax-img-text"></div>
+        <!-- <div class="parallax-img-text"></div> -->
         <div class="cards-container">
-            <section class="card">
+            <section class="card" id="first-card">
                 <h4 class="card-title">
                     <a href="https://github.com/BizTheHabesha/css-snippet-cheatsheet">
                         CSS Snippets
@@ -169,21 +169,30 @@
     </section>
 
     <div class="parallax-img parallax-img-contact">
-        <div class="parallax-img-text">
-            <span class="parallax-img-border">
-            </span>
+        <div class="parallax-img-text"></div>
+        <div class="contact-nav">
+            <h2 class="contact-link mailto-link">
+                <a href="mailto:gebrekidanbisratt@gmail.com">
+                    Personal Email
+                </a>
+            </h2>
+            <p class="contact-link-desc">For inquiries about projects or questions on implementation</p>
+            <h2 class="contact-link mailto-link">
+                <a href="mailto:biz@bisrat.dev">
+                    Professional Email
+                </a>
+            </h2>
+            <p class="contact-link-desc">Preferred for business inquiries</p>
+            <h2 class="contact-link tel-link">
+                <a href="tel:+14252707107">
+                    Professional Phone Number
+                </a>
+            </h2>
+            <p class="contact-link-desc">Also for business inquiries, but I wont always be reachable by phone.</p>
         </div>
-        <footer>
-            <h2>Made with ❤️ and CSS</h2>
-        </footer>
     </div>
-
-    <!-- <div class="parallax-img parallax-img-footer">
-        <div class="parallax-img-text">
-            <span class="parallax-img-border">
-                
-            </span>
-        </div>
-    </div> -->
+    <footer>
+        <h2>Made with ❤️ and CSS</h2>
+    </footer>
 </body>
 </html>
