add footer links

--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
         </div>
     </div>
     <footer>
+        <h3><a class="footer-link" id="github-footer-link" href="https://github.com/BizTheHabesha">Github</a></h3>
         <h2>Made with ❤️ and CSS</h2>
+        <h3><a class="footer-link" id="twitch-footer-link" href="https://www.twitch.tv/chillwithbiz">Twitch</a></h3>
     </footer>
 </body>
 </html>
