ovwr snippets w boss fight

--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
             <section class="card" id="first-card">
                 <!-- All elements of the card has there own link to maximize anchor tag range. -->
                 <h4 class="card-title">
-                    <a href="https://github.com/BizTheHabesha/css-snippet-cheatsheet">
-                        CSS Snippets
+                    <a href="https://github.com/BizTheHabesha/group-6-project-1">
+                        Boss Fight!
                     </a>
                 </h4>
-                <div class="card-content" id="css-snippets-card">
-                    <a class="card-image-link" href="https://github.com/BizTheHabesha/css-snippet-cheatsheet"></a>
+                <div class="card-content" id="boss-fight-card">
+                    <a class="card-image-link" href="https://github.com/BizTheHabesha/group-6-project-1"></a>
                 </div>
                 <p class="card-desc">
-                    <a href="https://github.com/BizTheHabesha/css-snippet-cheatsheet">
-                        A cheatsheet that includes a bunch of snippets used all throughout my projects.
+                    <a href="https://github.com/BizTheHabesha/group-6-project-1">
+                        A group project to create a fun singleplayer game using jQuery, Bulma, and several APIs.
                     </a>
                 </p>
             </section>
