add project 2 ss

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							Score Sensei
 						</a>
 					</h4>
-					<div class="card-content" id="prework-card">
+					<div class="card-content" id="score-sensei-card">
 						<a
 							class="card-image-link"
 							href="https://github.com/BizTheHabesha/group-1-project-2"></a>
